# PlainPod

./: .gitignore  LICENSE  README.md  io.github.jnesew.PlainPod.desktop  io.github.jnesew.PlainPod.json  io.github.jnesew.PlainPod.metainfo.xml  pyproject.toml  requirements.txt  test_classinfo_combos.py  test_classinfo_within.py  test_dbus.py  test_dbus2.py  test_dbus3.py  test_dbus4.py  test_dbus5.py  test_dbus6.py  test_final.py  test_final2.py  test_meta.py  test_meta2.py  test_props.py
.github/: FUNDING.yml
LICENSES/: THIRD_PARTY_LICENSES.md
plainpod/: __init__.py
qml/: Main.qml
repo_dir/: summary  summary.idx  summary.idx.sig  summary.sig
repo_dir/summaries/: 0c8fefdae4bf51350e7b816eefc8e515a777208529f9811692a0eab208536d58-b42b644b4af2dddb6a70267ea5b4b261e4687e821a4fd29ed20b480dc954a7a3.delta  10a7eaf8e8212bcdf99a59a066a87f74d2c865a8efc00958c60a54562e20ab43-b42b644b4af2dddb6a70267ea5b4b261e4687e821a4fd29ed20b480dc954a7a3.delta  1f1ed8d78db3ba34d64dc1f6664ed958bde95a189973de2938f221012efbf837-8e25bc95d88e9929bd52e58ef4d4e32635cb46c6f8def934e9b6866a17391ce7.delta  (+26 more)
src/plainpod/: app.py  artwork_cache.py  async_worker.py  credentials.py  download_manager.py  feed.py  (+10 more)
tests/: conftest.py  test_dict_list_model.py  test_downloads_state_service.py  test_feed_and_opml.py  test_filtering.py  test_normal_usage.py  test_playback_state_service.py  test_queue_service.py  test_settings_general_persistence.py  test_subscription_service.py  test_sync_repository.py  test_sync_server.py  test_sync_startup.py  test_viewmodel_async.py  test_viewmodel_playback_slots.py
(+14 files in other folders)
