[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PlainPod"
version = "0.2"
description = "simple podcast app scaffold"
requires-python = ">=3.11"
dependencies = [
  "dbus-next>=0.2.3",
  "keyring>=25.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plainpod = ["resources/**/*", "qml/**/*"]

[project.scripts]
plainpod = "plainpod.__main__:main"